# tpik

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install-tui.sh  install.sh  manual.sh  pyproject.toml
docs/: readme.md  technical-implementation.md
scripts/: tpik.sh
tpik/: __init__.py  app.py  simple_app.py
