[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpik"
version = "3.0.0"
description = "Enhanced TMUX Session Picker with beautiful TUI interface"
readme = "README.md"
authors = [
    {name = "sobechestnut-dev", email = "nathaniel.chestnut@gmail.com"},
]
license = {text = "MIT"}
keywords = ["tmux", "terminal", "tui", "session-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = [
    "textual>=0.45.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
tpik = "tpik.app:main"

[project.urls]
Homepage = "https://github.com/sobechestnut-dev/tpik"
Repository = "https://github.com/sobechestnut-dev/tpik"
Issues = "https://github.com/sobechestnut-dev/tpik/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/tpik",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true